projects/test/camunda/k8s/zw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zw-stress-test
  name: zw-stress-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zw-stress-test
  strategy: {}
  template:
    metadata:
      labels:
        app: zw-stress-test
    spec:
      restartPolicy: Always
      containers:
      - name: zeebe-worker
        image: josepht96/zeebe-worker-stress-test:v1
        imagePullPolicy: Always
        resources: {}
